# server/src/main/java/dmo/server/api/v1/dto/UpdateAnimeStatusDto.java
@@ -7,8 +7,5 @@ import javax.validation.constraints.NotNull;
 @Data
 public class UpdateAnimeStatusDto {
     @NotNull
-    private Long animeId;
-
-    @NotNull
     private AnimeStatusDto.Status status;
 }
